Tue Apr 30 18:06:14 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: don't allow adding an attribute to
	  a document node

Mon Apr 29 19:00:22 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt/xsltwin32config.h: preparing 1.0.17
	* doc/*: rebuilt the docs.

Mon Apr 29 17:22:08 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: better attempt to fix the problem in
	  xsltProcessUserParamInternal reported by Babak Vahedipour-Kunze

Sun Apr 28 17:53:23 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* win32/dsp/*.dsp: Removed obsolete macros
	* win32/dsp/*.def: Updated export definitions
	
Sun Apr 28 17:47:17 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: tried to fix a problem in
	  xsltProcessUserParamInternal reported by Babak Vahedipour-Kunze

Fri Apr 26 08:15:30 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c: applied another patch from Charles Bozeman to
	  enhance date/duration support
	* tests/exslt/date: added the associated set of regression tests

Thu Apr 25 08:18:57 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c: applied a patch from Charles Bozeman to add
	  duration routines to the date exslt extensions.

Thu Apr 18 22:56:06 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/exslt.h: extern "C" {  missing by Mark Vakoc

Tue Apr 17 23:16:54 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libexslt/date.c: fixed type inconsistencies, double->int
	 and unsigned/signed mismatch warnings eliminated

Tue Apr 16 19:40:21 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* win32/Makefile.msvc: XSLT debugger support fix
	* win32/configure.js: XSLT debugger support fix
	* libxslt/xsltconfig.h.in: XSLT debugger support fix

Mon Apr 15 19:27:31 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.16
	* doc/*: updated and rebuilt the docs
